theta function grammar

--- a/sigma.tex
+++ b/sigma.tex
@@ -1059,7 +1059,7 @@ Zero locus & \(-q^{1+2\Z}\) & \(q^{1+2\Z}\) & \(-q^{2\Z}\) & \(q^{2\Z}\) \\
 This embedding of \(E_\Lambda\) as an intersection of quadric surfaces in \(\CP^3\) is quite different from the Weierstrass embedding.  Nonetheless, the embeddings are analytically related.  Namely, there is an equality \[\frac{\mathrm d^2}{\mathrm dz^2} \log \theta_q(u) = \wp_\Lambda(z).\]  Separately, Weierstrass considered a function \(\sigma_\Lambda\), defined by \[\sigma_\Lambda(z) = z \prod_{\omega \in \Lambda \setminus 0} \left( 1 - \frac{z}{\omega} \right) \cdot \exp \left[ \frac{z}{\omega} + \frac{1}{2} \left( \frac{z}{\omega} \right)^2 \right],\] which also has the property that its second logarithmic derivative is \(\wp\) and so is ``basically \(\theta_q^{1/2,1/2}\)''.  In fact, any meromorphic function on the elliptic curve $E_\Lambda$ can be written in the form \[c \cdot \prod_{i=1}^n \frac{\sigma_\Lambda(z - a_i)}{\sigma_\Lambda(z - b_i)}.\]
 \end{remark}
 
-Both of these embeddings enjoy algebraic analogues.  The usual proof that all abelian varieties are projective is a kind of generalization of the Weierstrass embedding~\cite[Section I.6]{Milne}, \cite[Remark II.7.8.2]{Hartshorne}: from a line bundle on \(A\) one can extract a very ample line bundle \(\L\), then carefully construct some generating global sections to get an embedding into \(\P(\L^{\oplus n})\).  In the \(\theta\)--function version, not only is there a generalization of the embedding but it enjoys a certain canonicality: Weil showed that quasiperiodic functions on an elliptic curve\footnote{Indeed, even on an arbitrary complex abelian variety\index{abelian variety}.} are characterized uniquely as an irreducible representation for a certain group, that this representation admits a separate canonical presentation and with it a canonical basis, and finally that this canonical basis becomes the classical $\theta$--functions under the induced isomorphism~\cite{WeilTheta,Cartier}.  Mumford showed further that there is a wholly algebraic analogue of this collection of results~\cite{MumfordEquationsI,Tate}.\footnote{Mumford used this approach to say much more.  The fixed representation is unchanging even as the abelian variety is varied, and hence the embeddings of the abelian varieties all target the same projective space.  More than this, a given embedding is determined by the image of the identity point on the abelian variety (the ``$\theta$--null point''), as the coefficients of the relevant generalizations of the Jacobi quartics can be deduced from it (cf.\ the formulas for $A$, $B$, and $C$), altogether giving an effective description of the \emph{moduli} of abelian varieties by a generalization of the Jacobi \emph{relation}~\cite{MumfordEquationsII,MumfordEquationsIII}.  Polishchuk gives an account of many of these ideas from an unusual and remarkable perspective~\cite{Polishchuk}.}  The full extent of this story is far beyond our scope, but a critical theorem sitting at the heart of both of these approaches is:
+Both of these embeddings enjoy algebraic analogues.  The usual proof that all abelian varieties are projective is a kind of generalization of the Weierstrass embedding~\cite[Section I.6]{Milne}, \cite[Remark II.7.8.2]{Hartshorne}: from a line bundle on \(A\) one can extract a very ample line bundle \(\L\), then carefully construct some generating global sections to get an embedding into \(\P(\L^{\oplus n})\).  In the \(\theta\)--function version, not only is there a generalization of the embedding but it enjoys a certain canonicality: Weil showed that quasiperiodic functions on an arbitrary complex abelian variety\index{abelian variety} are characterized uniquely as an irreducible representation for a certain group, that this representation admits a separate canonical presentation and with it a canonical basis, that the functions corresponding to this basis under the isomorphism can be used to construct an embedding as above, and finally that the functions obtained in this way in the case of an elliptic curve recover the classical $\theta$--functions~\cite{WeilTheta,Cartier}.  Mumford showed further that there is a wholly algebraic analogue of this collection of results~\cite{MumfordEquationsI,Tate}.\footnote{Mumford used this approach to say much more.  The fixed representation is unchanging even as the abelian variety is varied, and hence the embeddings of the abelian varieties all target the same projective space.  More than this, a given embedding is determined by the image of the identity point on the abelian variety (the ``$\theta$--null point''), as the coefficients of the relevant generalizations of the Jacobi quartics can be deduced from it (cf.\ the formulas for $A$, $B$, and $C$), altogether giving an effective description of the \emph{moduli} of abelian varieties by a generalization of the Jacobi \emph{relation}~\cite{MumfordEquationsII,MumfordEquationsIII}.  Polishchuk gives an account of many of these ideas from an unusual and remarkable perspective~\cite{Polishchuk}.}  The full extent of this story is far beyond our scope, but a critical theorem sitting at the heart of both of these approaches is:
 \begin{theorem}[{``Theorem of the Cube'', \cite[Theorem I.5.1]{Milne}}]\label{Theta3IsTrivial}\index{cubical structure!theorem of the cube}\index{theta structure@\(\Theta\)--structure|see {cubical structure}}
 Let \(A\) be an abelian variety, let \(p_i: A \times A \times A \to A\) be the projection onto the \(i\){\th} factor, and let \(p_{ij} = p_i +_A p_j\), \(p_{ijk} = p_i +_A p_j +_A p_k\).  Then for any invertible sheaf \(\L\) on \(A\), the sheaf \[\Theta^3(\L) := \frac{p_{123}^* \L \otimes p_1^* \L \otimes p_2^* \L \otimes p_3^* \L}{p_{12}^* \L \otimes p_{23}^* \L \otimes p_{31}^* \L \otimes p_\emptyset^* \L} = \bigotimes_{I \subseteq \{1, 2, 3\}} (p_I^* \L)^{(-1)^{|I| - 1}}\] on \(A \times A \times A\) is trivial.  If \(\L\) is rigid (i.e., it has a specified trivialization at the identity point of \(A\)), then \(\Theta^3(\L)\) is \emph{canonically} trivialized by a section \(s(A; \L)\). \qed
 \end{theorem}
