fix bad line break

--- a/powerops.tex
+++ b/powerops.tex
@@ -903,7 +903,7 @@ Let \(v^k\co S^{2k} \to BU\) be the \(k\){\th} power of the class \(\L\), so tha
 
 Now we move away from \(MU\).  There are three directions for generalization: connective orientations, real orientations, and non-complex targets.
 \begin{enumerate}
-\item The rational analysis of Ando--Hopkins--Strickland identifies \([BU[2k, \infty), \Q \otimes R]\) with \(k\)--variate symmetric multiplicative \(2\)--cocycles over \(R\), every one of which arises as \(\delta^1\) repeatedly applied to a univariate series.  In homotopy theoretic terms, this means that every \(MU[2k, \infty)\)--orientation of a rational spectrum factors through an \(MU\)--orientation.
+\item The rational analysis of Ando--Hopkins--Strickland identifies the set \[[BU[2k, \infty), \Q \otimes R]\] with \(k\)--variate symmetric multiplicative \(2\)--cocycles over \(R\), every one of which arises as \(\delta^1\) repeatedly applied to a univariate series.  In homotopy theoretic terms, this means that every \(MU[2k, \infty)\)--orientation of a rational spectrum factors through an \(MU\)--orientation.
 \item The cofiber sequence \(kO \to kU \to \Susp^2 kO\) splits rationally, using the idempotents \(\frac{1 \pm \chi}{2}\) on \(kU\).  Accordingly, \(MU\)--orientations of rational spectra that factor through \(M\SO\)--orientations have an invariance property under \(\chi\): \(-[-1](x) = x\), corresponding to the idempotent factor \(+\).  This pattern continues for the characteristic series of connective orientations.
 \item This same cofiber sequence and idempotent splitting also tells us that rational \(KU\)--cohomology classes in the image of \(KO\)--cohomology are \(\chi\)--invariant, i.e., they belong to the \(-\) factor.
 \end{enumerate}
