add a remark about the transchromatic logarithm and p-divisible groups

--- a/powerops.tex
+++ b/powerops.tex
@@ -1154,7 +1154,7 @@ The case of the orientation \(M\String \to \tmf\) has all of the same trappings,
     \item Begin with a rational orientation, which is basically the Witten genus valued in holomorphic expansions of modular forms.
     \item Analyze the homotopy type of \(\widehat L_1 \tmf\) and compare it to that of \(KO\).  This lets us use another universal coefficient theorem to lift our description of \(KO^* KO\) as \(KO^*\)--valued measures to \((\widehat L_1 \tmf)^* KO\) as \(\widehat L_1 \tmf^*\)--valued measures.
     \item The homotopy type of \(\widehat L_2 \tmf\) is ``naively irrelevant'' in the chromatic fracture square: maps \(b\spin \to \widehat L_2 \tmf\) factor through \(\widehat L_2 b\spin = \widehat L_2 KO_p = 0\).
-    \item However, the logarithm's presence in the chromatic fracture square \[\widehat L_1 \tmf \to \widehat L_1 \widehat L_2 \tmf\] has a real effect that must be understood.  This is not easy: the height \(2\) logarithm is not so accessible, so this requires a real understanding of power operations in \(\tmf\).
+    \item However, the logarithm's presence in the chromatic fracture square \[\widehat L_1 \tmf \to \widehat L_1 \widehat L_2 \tmf\] has a real effect that must be understood.  This is not easy: the higher height logarithm is not so accessible, and in general it is best cast in the language of \(p\)--divisible groups.\footnote{Behrens has claimed, but has not yet put into print, that the transchromatic logarithms are described by an analogue of Rezk's formulas for the logarithm at height \(n\)~\cite[Subsections 1.10 and 1.12]{RezkLogarithm}, where the collection of subgroups appearing in the formula are replaced by those subgroups of a certain \(p\)--divisible group (arising from a base-changed formal group) which have no interaction with the \'etale component.}  In the specific case of \(\tmf\), it requires a real understanding of its theory of power operations, which must be assembled out of the discussion of power operations for \(E\)--theories given above.
     \item You also have to calculate the Miller invariant associated to \(\tmf\).  In the case of \(\EinftyRings(M\Spin, KO)\), one uses the \(A_\infty\)--orientation \(MU \to KU\), as well as a rational understanding of the maps \(\pi_* BU \to \pi_* BO\) and \(\pi_* KO \to \pi_* KU\), and one must replace each of these ingredients with \(\tmf\) analogues.  The main point is that there are very few modular forms whose constant term is a given Bernoulli number\index{Bernoulli!number}.  There is an alternative approach, along the lines of Miller's original calculation~\cite{MillerBernoulliNos}, that takes as input a calculation of a certain \(S^1\)--transfer.\footnote{There is, supposedly, a further alternative approach that uses an \(H_\infty\)--orientation and tricks with the Bousfield--Kuhn functor to determine the Miller invariant, but I am unable to reconstruct this argument.}
     \item Finally, you have to ramp up the algebraic part of the calculation by identifying the analogues of the Mazur moments in \(\pi_* \widehat L_1 \tmf\).  These turn out to be normalized \index{Eisenstein series}Eisenstein series.
 \end{enumerate}
