fix pi_* KO picture

--- a/koass.tex
+++ b/koass.tex
@@ -16,8 +16,7 @@
 ]
 
 \tower(0,0){12}
-\class["\eta"](1,1)
-\etaclass
+\class["\eta"](1,1) \structline(1,1)(0,0)
 \etaclass
 \class["\lambda"](4,3)
 \tower(4,4){8} \structline(4,4)(4,3)
