--- a/intro.tex
+++ b/intro.tex
@@ -50,7 +50,7 @@ The integer obtained by the above process is \(\int_Z \omega\). \qed
 
 Now take \(G = e\) to be the trivial structure group, which is the bordism theory of framed manifolds, i.e., those with stably trivial normal bundle.  In this case, the \index{Pontryagin--Thom construction}Pontryagin--Thom construction gives an equivalence \(\S \xrightarrow{\simeq} Me\).  It is thus possible that stable homotopy theory can be investigated solely through the lens of framed bordism.\footnote{Indeed, some people have taken up this viewpoint.  For a completely noncanonical point of entry, see Stolz~\cite{Stolz}.}  We will prefer to view this the other way: the sphere spectrum \(\S\) often appears to us as a natural object, and we will occasionally replace it by \(Me\), the framed bordism spectrum.  For example, given a ring spectrum \(E\) with unit map \(\S \to E\), we can reconsider this as a ring map \[Me \xrightarrow{\simeq} \S \to E.\]  Following along the lines of the previous paragraph, we learn that any ring spectrum \(E\) is automatically equipped with a theory of integration for framed manifolds.
 
-Sometimes, as in the examples above, this unit map factors: \[\S \simeq Me \to MO \to H\Z/2.\]  This is a witness to the overdeterminacy of \(H\Z/2\)'s integral for framed bordism: if the framed manifold is pushed all the way down to an unoriented manifold, there is still enough residual data to define the integral.\footnote{It is literally more information than this: even unframeable unoriented manifolds acquire a compatible integral.}  Given any ring spectrum \(E\), we can ask the analogous question: If we filter \(O\) by a system of structure groups, through what stage does the unit map \(Me \to E\) factor?  For instance, the map \[\S = Me \to M\SO \to H\Z\] considered above does \emph{not} factor further through \(MO\)---an orientation is \emph{required} to define the integral of an integer--valued cohomology class.  Recognizing \(\SO \to O\) as the \(0\){\th} Postnikov--Whitehead truncation of \(O\), we are inspired to use the rest of the \index{Postnikov tower}Postnikov filtration as our filtration of structure groups.  Here is a diagram of this filtration and some interesting minimally-factored integration theories related to it, circa 1970:
+Sometimes, as in the examples above, this unit map factors: \[\S \simeq Me \to MO \to H\Z/2.\]  This is a witness to the overdeterminacy of \(H\Z/2\)'s integral for framed bordism: if the framed manifold is pushed all the way down to an unoriented manifold, there is still enough residual data to define the integral.\footnote{It is literally more information than this: even unframeable unoriented manifolds acquire a compatible integral.}  Given any ring spectrum \(E\), we can ask the analogous question: If we filter \(O\) by a decreasing system of structure groups, through what stage does the unit map \(Me \to E\) factor?  For instance, the map \[\S = Me \to M\SO \to H\Z\] considered above does \emph{not} factor further through \(MO\)---an orientation is \emph{required} to define the integral of an integer--valued cohomology class.  Recognizing \(\SO \to O\) as the \(0\){\th} Postnikov--Whitehead truncation of \(O\), we are inspired to use the rest of the \index{Postnikov tower}Postnikov filtration as our filtration of structure groups.  Here is a diagram of this filtration and some interesting minimally-factored integration theories related to it, circa 1970:
 \begin{center}
 \begin{tikzcd}
 Me \arrow{r} \arrow{rrrd} \arrow{rrrrd} \arrow{rrrrrd} & \cdots \arrow{r} & M\String \arrow{r} & M\Spin \arrow{r} \arrow[crossing over]{d} & M\SO \arrow{r} \arrow[crossing over]{d} & MO \arrow[crossing over]{d} \\
@@ -64,7 +64,7 @@ This is the situation homotopy theorists found themselves in some decades ago, w
 There is a map of rings \[\sigma: M\Spin_* \to \C(\!(q)\!).\]  Moreover, if \(Z\) is a \(\Spin\) manifold such that half\footnote{It is a special property of \(\Spin\)--manifolds that this class is always divisible by \(2\).} its first Pontryagin class vanishes---that is, if \(Z\) lifts to a \(\String\)--manifold---then \(\sigma(Z)\) lands in the subring \(MF \subseteq \Z\ps{q}\) of \index{modular form!q expansion@\(q\)--expansion}\(q\)--expansions of \index{modular form}modular forms with integral coefficients. \qed
 \end{theorem}
 
-\noindent However, neither party gave indication that their result should be valid ``in families'' (in our sense), and no theory of integration was formally produced (in our sense).  From the perspective of the homotopy theorist, it was not even totally clear what such a claim would mean: to give a topological enrichment of these theorems would mean finding a ring spectrum \(E\) such that \(E_*(*)\) had something to do with modular forms.
+\noindent However, neither party gave indication that their result should be valid ``in families'' (in our sense), and no theory of integration was formally produced (in our sense).  From the perspective of the homotopy theorist, it was not even clear what such a claim would mean: to give a topological enrichment of these theorems would mean finding a ring spectrum \(E\) such that \(E_*(*)\) had something to do with modular forms.
 
 Around the same time, Landweber, Ravenel, and Stong began studying \index{elliptic spectrum}\textit{elliptic cohomology} for independent reasons~\cite{LRS}; sometime much earlier, Morava had constructed an object ``\(K^{\Tate}\)'' associated to the \index{Tate curve}Tate elliptic curve~\cite[Section 5]{MoravaFormsOfKthy}; and a decade later Ando, Hopkins, and Strickland~\cite{AHSTheoremOfTheCube} put all these together in the following theorem:
 
