minor typesetting fixes

--- a/mo.tex
+++ b/mo.tex
@@ -205,7 +205,7 @@ Set \(A_n = \F_2[x_1, \ldots, x_n]\).  Elements of \((\Spec A_n)(T)\) can be ide
 \begin{align*}
 \mathbb A^n & := \Spec \F_2[x_1, \ldots, x_n], & \mathbb A^{n, J} & := \Spec \F_2[x_1, \ldots, x_n] / (x_k^{j_k+1}).
 \end{align*}
-The functor \(\mathbb A^n\) is called \index{scheme!affine \(n\)--space}\textit{affine \(n\)--space}---reasonable, since the value \(\mathbb A^n(T)\) is isomorphic to \(T^n\).  We refer to \(\mathbb A^1\) as the \textit{affine line}.  Note that the quotient map \(A_1 \to A_1^{(j)}\) induces an inclusion \(\mathbb A^{1, (j)} \to \mathbb A^1\) and that \(\mathbb A^{1, (0)}\) is a constant functor: \[\mathbb A^{1, (0)}(T) = \{f: \F_2[x] \to T \mid f(x) = 0\}.\]  Accordingly, we declare ``\(\mathbb A^{1, (0)}\)'' to be the \textit{origin on the affine line} and \(\mathbb A^{1, (j)}\) to be the \textit{\((n+1)\)\textsuperscript{st} order (nilpotent) neighborhood of the origin} in the affine line.
+The functor \(\mathbb A^n\) is called \index{scheme!affine \(n\)--space}\textit{affine \(n\)--space}---reasonable, since the value \(\mathbb A^n(T)\) is isomorphic to \(T^n\).  We refer to \(\mathbb A^1\) as the \textit{affine line}.  Note that the quotient map \(A_1 \to A_1^{(j)}\) induces an inclusion \(\mathbb A^{1, (j)} \to \mathbb A^1\) and that \(\mathbb A^{1, (0)}\) is a constant functor: \[\mathbb A^{1, (0)}(T) = \{f\co \F_2[x] \to T \mid f(x) = 0\}.\]  Accordingly, we declare ``\(\mathbb A^{1, (0)}\)'' to be the \textit{origin on the affine line} and \(\mathbb A^{1, (j)}\) to be the \textit{\((n+1)\)\textsuperscript{st} order (nilpotent) neighborhood of the origin} in the affine line.
 \end{example}
 
 We can also use this language to re-express another common object arising in algebraic topology: the Hopf algebra, which appears when taking the mod--\(2\) cohomology of an \(H\)--group.  In addition to the usual ring structure on cohomology groups, the \(H\)--group multiplication, unit, and inversion maps additionally induce a diagonal map \(\Delta\), an augmentation map \(\eps\), and an antipode \(\chi\) respectively.  Running through the axioms, one quickly checks the following:
@@ -666,7 +666,7 @@ Next, we consider the more computationally serious case of \(X = kO\), the conne
 \Susp^2 kU & \xrightarrow{\cdot \beta} kU \to H\Z, &
 H\Z & \xrightarrow{\cdot 2} H\Z \to \HFtwo.
 \end{align*}
-These combine to give a resolution of \(\HFtwo\) via an iterated cofiber of free \(kO\)--modules, with \index{Poincar\'e series}Poincar\'e series \[((1 + t^2) + t^3(1 + t^2)) + t((1 + t^2) + t^3(1 + t^2)) = 1 + t + t^2 + 2t^3 + t^4 + t^5 + t^6.\]  Repeatedly using the identity \(kO \sm_{kO} \HFtwo \simeq \HFtwo\) gives a small presentation of the Hopf algebra \(\pi_* \HFtwo \sm_{kO} \HFtwo\): it is a commutative Hopf algebra over \(\F_2\) with the above Poincar\'e series.  The \index{Milnor--Moore}Borel--Milnor--Moore~\cite[Theorem 7.11]{MilnorMoore} classification of commutative Hopf algebras over \(\F_2\) shows that the algebra structure is either \[\frac{\F_2[a, b, c]}{(a^2 = 0, b^2 = 0, c^2 = 0)} \quad \text{or} \quad \frac{\F_2[a, b, c]}{(a^2 = b, b^2 = 0, c^2 = 0)}\] for \(|a| = 1\), \(|b| = 2\), and \(|c| = 3\).  By knowing that the natural map \(\mathcal A \to \pi_* \HFtwo \sm_{kO} \HFtwo\) winds up inducing an isomorphism \(\pi_{* \le 2} \S \to \pi_{* \le 2} kO\), we conclude that we are in the latter case, which gives a presentation of the Hopf algebra as a whole:
+These combine to give a resolution of \(\HFtwo\) via an iterated cofiber of free \(kO\)--modules, with \index{Poincar\'e series}Poincar\'e series \[((1 + t^2) + t^3(1 + t^2)) + t((1 + t^2) + t^3(1 + t^2)) = 1 + t + t^2 + 2t^3 + t^4 + t^5 + t^6.\]  Repeatedly using the identity \(kO \sm_{kO} \HFtwo \simeq \HFtwo\) gives a small presentation of the Hopf algebra \(\pi_* \HFtwo \sm_{kO} \HFtwo\): it is a commutative Hopf algebra over \(\F_2\) with the above Poincar\'e series.  The \index{Milnor--Moore}Borel--Milnor--Moore classification of commutative Hopf algebras over \(\F_2\)~\cite[Theorem 7.11]{MilnorMoore} shows that the algebra structure is either \[\frac{\F_2[a, b, c]}{(a^2 = 0, b^2 = 0, c^2 = 0)} \quad \text{or} \quad \frac{\F_2[a, b, c]}{(a^2 = b, b^2 = 0, c^2 = 0)}\] for \(|a| = 1\), \(|b| = 2\), and \(|c| = 3\).  By knowing that the natural map \(\mathcal A \to \pi_* \HFtwo \sm_{kO} \HFtwo\) winds up inducing an isomorphism \(\pi_{* \le 2} \S \to \pi_{* \le 2} kO\), we conclude that we are in the latter case, which gives a presentation of the Hopf algebra as a whole:
 \begin{center}
 \begin{tikzcd}
 \pi_* \HFtwo \sm \HFtwo \arrow{r} \arrow[equal]{d} & \pi_* \HFtwo \sm_{kO} \HFtwo \arrow[equal]{d} \\
@@ -713,7 +713,7 @@ Our goal in this section is to use our results so far to make a calculation of \
 
 Our first step toward this is the following calculation:
 \begin{lemma}[{\cite[Theorem 16.17]{Switzer}}]\label{HF2BOIsSymAlg}
-The natural map \[\widetilde{\HFtwo P}_0(BO(1)) \to \HFtwo P_0(BO).\] induces a map \[\Sym \widetilde{\HFtwo P}_0(BO(1)) = \frac{\Sym \HFtwo P_0(BO(1))}{\beta_0 = 0} \xrightarrow{\simeq} \HFtwo P_0(BO)\] which is an isomorphism of Hopf algebras and of comodules for the dual Steenrod algebra.
+The natural map \[\widetilde{\HFtwo P}_0(BO(1)) \to \HFtwo P_0(BO).\] induces a map \[\Sym \widetilde{\HFtwo P}_0(BO(1)) = \frac{\Sym \HFtwo P_0(BO(1))}{\beta_0 = 1} \xrightarrow{\simeq} \HFtwo P_0(BO)\] which is an isomorphism of Hopf algebras and of comodules for the dual Steenrod algebra.
 \end{lemma}
 \begin{proof}
 This follows from several standard facts about \index{Stiefel--Whitney class}Stiefel--Whitney classes.  First, these classes generate the cohomology ring \(\HFtwo P^0 BO(n)\)~\cite[Theorem 16.10]{Switzer}: \[\HFtwo P^0 BO(n) \cong \F_2\ps{w_1, \ldots, w_n}.\]  Then, the total Stiefel--Whitney class \(w(V) = \sum_j w_j(V) t^j\) is exponential~\cite[Theorem 16.3]{Switzer}, in the sense that \[w(V \oplus W) = w(V) \cdot w(W).\]  It follows that the natural map \[\HFtwo P^0 BO(n) \xrightarrow{\bigoplus_{j=1}^n \L_j} \HFtwo P^0 BO(1)^{\times n} \cong (\HFtwo P^0 BO(1))^{\otimes n}\] is the inclusion of the symmetric polynomials, by calculating the total Stiefel--Whitney class \[w\left( \bigoplus_{j=1}^n \L_j \right) = \prod_{j=1}^n (1 + w_1(\L_j)) = \sum_{j=0}^n \sigma_j(w_1(\L_1), \ldots, w_1(\L_n)) t^j.\]  Dually, the homological map \[(\HFtwo P_0 BO(1))^{\otimes n} \to \HFtwo P_0 BO(n)\] is surjective, modeling the quotient from the tensor product to the symmetric tensor product.  Stabilizing as \(n \to \infty\), we recover the statement of the Lemma.
