--- a/quillen.tex
+++ b/quillen.tex
@@ -195,7 +195,7 @@ and hence a \(n\)--tuple of \((2n)\)--variate power series ``\(+_\phi\)'', satis
 Such a series \(+_\phi\) is called a \index{formal group!law}\textit{formal group law}, and it is the concrete data associated to a formal group.
 \end{definition}
 
-Let's now consider two examples of \(E\) which are complex-orientable and describe these invariants for them.
+Let us now consider two examples of complex-orientable ring spectra \(E\) and describe these invariants for them.
 
 \begin{example}\label{HZGivesGa}
 There is an isomorphism \(\CP^\infty_{H\Z P} \cong \G_a\).  This follows from reasoning identical to that given in \Cref{RPinftyExampleForReal}.
@@ -443,7 +443,7 @@ Note that the map on \(E\)--cohomology between these two last fibers is surjecti
 
 In coordinate-free language, we have the following Corollary:
 \begin{corollary}[{\Cref{CohomologyOfProjectivization} redux}]
-Take \(E\) to be \emph{complex-orientable}.  The map \[\P(V)_E \to X_E \times \CP^\infty_E\] is a closed inclusion of \(X_E\)--schemes, and the structure map \(\P(V)_E \to X_E\) is free and finite of rank \(n\).  It follows that \(\P(V)_E\) is a \index{divisor}divisor on \(\CP^\infty_E\) considered over \(X_E\), i.e.,
+Take \(E\) to be \emph{complex-orientable}.  The map \[\P(V)_E \to X_E \times \CP^\infty_E\] is a closed inclusion of \(X_E\)--schemes, and the structure map \(\P(V)_E \to X_E\) is free and finite of rank \(n\).\footnote{That this map is relative to $X_E$ is why we were free to consider only curves in the previous Lecture.}  It follows that \(\P(V)_E\) is a \index{divisor}divisor on \(\CP^\infty_E\) considered over \(X_E\), i.e.,
 \[\pushQED{\qed}
 \P(V)_E \in \left(\Div_n^+(\CP^\infty_E)\right)(X_E). \qedhere
 \popQED\]
@@ -466,7 +466,7 @@ i_V^*(V) \cong \bigoplus_{i=1}^n \L_i. \qedhere
 \popQED\]
 \end{corollary}
 
-This last Corollary is extremely important.  Its essential contents is to say that any question about characteristic classes can be checked for sums of line bundles.  Specifically, because of the injectivity of \(i_V^*\), any relationship among the characteristic classes deduced in \(E^* Y_V\) must already be true in the ring \(E^* X\).  The following theorem is a consequence of this principle:
+This last Corollary is extremely important.  Its essential algebraic contents is to say that any question about characteristic classes can be checked for sums of line bundles.  Specifically, because of the injectivity of \(i_V^*\), any relationship among the characteristic classes deduced in \(E^* Y_V\) must already be true in the ring \(E^* X\).  The following theorem is a consequence of this principle:
 
 \begin{theorem}[{\cite[Theorem 16.2 and 16.10]{Switzer}}]\label{ChernClassesAreSymmInChernRoots}
 Again take \(E\) to be complex-oriented.  The coset fibration \[U(n-1) \to U(n) \to S^{2n-1}\] deloops to a spherical fibration \[S^{2n-1} \to BU(n-1) \to BU(n).\]  The associated Serre spectral sequence \[E_2^{*, *} = H^*(BU(n); E^* S^{2n-1}) \Rightarrow E^* BU(n-1)\] degenerates at \(E_{2n}\) and induces an isomorphism \[E^* BU(n) \cong E^* \llbracket \sigma_1, \ldots, \sigma_n\rrbracket.\]  Now, let \(V\co X \to BU(n)\) classify a vector bundle \(V\).  Then the coefficient \(c_j\) in the polynomial \(c(V)\) is selected by \(\sigma_j\): \[c_j(V) = V^*(\sigma_j).\]
@@ -601,13 +601,13 @@ There is an isomorphism
 \[\HFp_* \HFp \cong \F_p[\xi_1, \xi_2, \ldots] \otimes \Lambda[\tau_0, \tau_1, \tau_2, \ldots]\]
 with \(|\xi_j| = 2p^j-2\) and \(|\tau_j| = 2p^j - 1\). \qed
 \end{theorem}
-\noindent There are odd--dimensional classes in this algebra, and the \emph{graded-commutativity} of the dual mod--\(p\) \index{Steenrod algebra!odd primes}\index{Bockstein} Steenrod algebra means that these classes anti-commute.  This prohibits us both from even writing ``\(\Spec(\HFp_* \HFp)\)'', and this is the first time we have encountered Hindrance~\#\ref{SkewCommutativeDeficiency} from \Cref{TheSteenrodAlgebraSection} in the wild.
+\noindent There are odd--dimensional classes in this algebra, and the \emph{graded-commutativity} of the dual mod--\(p\)\index{Steenrod algebra!odd primes}\index{Bockstein} Steenrod algebra means that these classes anti-commute.  This prohibits us both from even writing ``\(\Spec(\HFp_* \HFp)\)'', and this is the first time we have encountered Hindrance~\#\ref{SkewCommutativeDeficiency} from \Cref{TheSteenrodAlgebraSection} in the wild.
 
 Because of this, we will not feel any guilt for taking a completely alternative approach to this calculation.  This other method, due to Quillen, has as its keystone a completely different kind of cohomology operation called a \index{power operation}\textit{power operation}.  These operations are quite technical to describe, but at their core is taking the \(n\){\th} power of a cohomology class---and hence they have a frustrating lack of properties, including failures to be additive and to be stable.  Our goal in this Lecture is just to define these cohomology operations, specialized to the particular setting we will need for Quillen's proof.  Unlike with Steenrod squares, their algebro-geometric interpretation will not be immediately accessible to us, and indeed their eventual reinterpretation in these terms is one of the more hard-won pursuits in this area of mathematics (cf.\ \Cref{PowerOpnsSection}).
 
 Power operations arise not just from taking the \(n\){\th} power of a cohomology class but from also remarking on the natural symmetry of that operation.  We record this symmetry using the following technical apparatus:
 \begin{lemma}[{\cite[Examples 6.1.4.2 and 6.1.6.2]{LurieHA}}]
-Given a spectrum \(E\), its \(n\)--fold smash power forms a \index{equivariant spectrum}\textit{\(\Sigma_n\)--spectrum}, in the sense that there is a natural diagram \(* \mmod \Sigma_n \to \CatOf{Spectra}\) of \(\infty\)--categories which selects \(E^{\sm n}\) on objects. \qed
+Given a spectrum \(E\), its \(n\)--fold smash power forms a \index{equivariant spectrum}\textit{\(\Sigma_n\)--spectrum}, in the sense that there is a natural diagram \(* \mmod \Sigma_n \to \CatOf{Spectra}\) of \(\infty\)--categories which selects \(E^{\sm n}\) on objects.  In the case of $E = \Susp^\infty X$, this diagram agrees with the permutation diagram \(* \mmod \Sigma_n \to X^{\sm n}\) formed in the \(1\)--category \(\CatOf{Spaces}\). \qed
 \end{lemma}
 
 \noindent In turn, a cohomology class \(f\co \Susp^\infty_+ X \to E\) gives rise to a morphism of \(\Sigma_n\)--spectra \[f^{\sm n}\co (\Susp^\infty_+ X)^{\sm n} \to E^{\sm n}.\]  The homotopy colimit of such a diagram is called the \textit{homotopy orbits}\index{equivariant spectrum!homotopy orbits} of the spectrum, and this gives a natural diagram
@@ -635,7 +635,6 @@ The optional adjective ``total'' is a reference to the following variant of this
 \Susp^\infty_+ X \sm \S \arrow["1 \sm \sigma"]{r} & \Susp^\infty_+ X \sm \Susp^\infty_+ B\Sigma_n \sm E \arrow["P^{\Sigma_n} f \sm 1"]{r} & E \sm E \arrow["\mu"]{r} & E.
 \end{tikzcd}
 \end{center}
-For instance, restriction to the basepoint in \(B\Sigma_n\) gives the \(n\)--fold cup product \(f^{n}\).
 \end{remark}
 
 Some properties of this construction are immediately visible---for instance, it is multiplicative: \[P^{\Sigma_n}(f \cdot g) = P^{\Sigma_n}(f) \cdot P^{\Sigma_n}(g),\] and restriction of \(P^{\Sigma_n}(f)\) to the basepoint in \(\Sigma^\infty_+ B\Sigma_n\) yields the cup power class \(f^n\).  In order to state any further properties, we will need to make some extraneous observations.  First, note that any map of groups \(\phi\co G \to \Sigma_n\) gives a variation on this construction by restriction of diagrams
@@ -744,7 +743,7 @@ F_0^{tC_p} \arrow[equiv]{r} & F_1^{tC_p} \arrow[equiv]{r} & \cdots \arrow[equiv]
 Eliminating the intermediate filtration stages with empty filtration quotients, we see that this filtration is equivalent data to a cofiber sequence \[(X^{\sm p})^{tC_p} \to (Y^{\sm p})^{tC_p} \to ((Y/X)^{\sm p})^{tC_p}.\]  Repeating this proof inside of \(E\)--module spectra gives the desired result.
 \end{proof}
 
-The effect of this Lemma is twofold.  For one, the Tate operation is not only additive, it is even \emph{stable}.  Secondly, it suffices to understand the behavior of passing to the Tate construction in the case of \(X = *\), i.e., the effect of the map \(E^{hC_p} \to E^{tC_p}\).  Since we are intending to make a computation, it will at this point be convenient to also specialize to our case of interest of where \(E = MU\).
+The effect of this Lemma is twofold.  For one, the Tate operation is not only additive, it is even \emph{stable}.  Secondly, it suffices to understand the behavior of passing to the Tate construction in the case of \(X = *\), i.e., the effect of the map \(E^{hC_p} \to E^{tC_p}\).  Since we are intending to make a computation, it will at this point be convenient to also specialize to our case of interest, \(E = MU\).
 
 \begin{theorem}\label{TateConstructionOnMU}
 There is an isomorphism \[\pi_* MU^{tC_n} = MU^* BC_n[x^{-1}],\] where \(x\) is the restriction to \(MU^2 BC_n\) of the canonical class \(x \in MU^2(\CP^\infty)\).\footnote{Everything we say here will actually be valid for any number \(n\), not just a prime, as well as any ring spectrum \(E\) under \(MU\).}
@@ -877,7 +876,7 @@ Having now set up an encompassing theory of stable operations, we now seek to gi
 (\Susp^2 MU)^{\sm n} \arrow{r} & (\Susp^2 MU)^{\sm n}_{hC_n} \arrow{r} & \Susp^{2n} MU.
 \end{tikzcd}
 \end{center}
-The commutativity of the widest rectangle (i.e., the justification for the name ``\(c_n\)'' on the right-most vertical arrow) comes from the Cartan formula for Chern classes: because \(\L^{\oplus n}\) splits as the sum of \(n\) line bundles, \(c_n(\L^{\oplus n})\) is computed as the product of the \(1\)\textsuperscript{st} Chern classes of those line bundles.  Second, the commutativity of the right-most square is not trivial: it is a specific consequence of how the multiplicative structure on \(MU\) arises from the direct sum of vector bundles.\footnote{In general, any notion of first Chern class \(\Susp^\infty_+ BU(1) \to \Susp^2 E\) gives rise to a \emph{noncommuting} diagram of this same shape.  The two composites \(\Susp^\infty_+ BU(1)^{\sm n}_{hC_n} \to \Susp^{2n} E\) need not agree, since \(\L(n)\) has no \textit{a priori} reason to be compatible with the factorization appearing in the \(H_\infty^2\)--structure.  They turn out to be related nonetheless, and their exact relation (as well as a procedure for making them agree in certain cases) is the subject of \Cref{PowerOpnsSection}.}  The commutativities of the other two squares comes from the natural transformation from a \(C_n\)--space to its homotopy orbit space.
+The commutativity of the widest rectangle (i.e., the justification for the name ``\(c_n\)'' on the right-most vertical arrow) comes from the Cartan formula for Chern classes: because \(\L^{\oplus n}\) splits as the sum of \(n\) line bundles, \(c_n(\L^{\oplus n})\) is computed as the product of the \(1\)\textsuperscript{st} Chern classes of those line bundles.  Second, the commutativity of the right-most square is not trivial: it is a specific consequence of how the multiplicative structure on \(MU\) arises from the direct sum of vector bundles.\footnote{In general, any notion of first Chern class \(\Susp^\infty_+ BU(1) \to \Susp^2 E\) gives rise to a \emph{noncommuting} diagram of this same shape.  The two composites \(\Susp^\infty_+ BU(1)^{\sm n}_{hC_n} \to \Susp^{2n} E\) need not agree, since \(\L(n)\) has no \textit{a priori} reason to be compatible with the factorization appearing in the \(H_\infty^2\)--structure.  They turn out to be loosely related nonetheless, and their exact relation (as well as a procedure for making them agree in certain cases) is the subject of \Cref{PowerOpnsSection}.}  The commutativities of the other two squares comes from the natural transformation from a \(C_n\)--space to its homotopy orbit space.
 
 Hence, the internal cyclic power operation \(P^{C_n}(x)\) applied to the canonical coordinate \(x\) is defined by the composite
 \begin{align*}
@@ -1044,7 +1043,7 @@ w^m P^{C_p}(x) & = \sum_{|\alpha| \le m-q} w^{m-q - |\alpha|} a(t)^\alpha s_\alp
 \end{align*}
 Recall that \(w\) is a power series in \(t\) with coefficients in \(C\) and leading term \((p-1)! \cdot t^{p-1}\), so that \(t^{p-1} = w \cdot \theta(t)\) for some multiplicatively invertible series \(\theta(t)\) with coefficients in \(C\).  Since \(s_\alpha\) raises degree, we have \(s_\alpha x \in R\) by the inductive hypothesis, and we may thus collect all those terms (as well as many factors of \(\theta(t)^{-1}\)) into a series \(\psi_x(t) \in R_{(p)}\llbracket t \rrbracket\) to write \[t^N(w^q P^{C_p}(x) - x) = \psi_x(t),\] where \(N = (m-q)(p-1)\).
 
-Consider the set of possible integers \(N\) for which we can write such an equation---we know that \(N = (m-q)(p - 1)\) works, but we now also consider values of \(N\) which are not multiples of \((p - 1)\).  We aim to conclude that \(N = 1\) is the minimum of this set, so suppose that \(N\) is the minimum such value.  Using \Cref{RestrictingSteenrodOpToBasepoint}, we find that restricting this equation along the inclusion \(i\co X \to X \times BU(1)[p]\) sets \(t = 0\) and yields \(\psi_x(0) = 0\).  It follows that \(\psi_x(t) = t \phi_x(t)\) is at least once \(t\)--divisible, and thus \[t (t^{N-1}(w^q P^{C_p}x - x) - \phi_x(t)) = 0.\]  Appealing to \Cref{QuillensGysinFact}, we produce a class \(y \in \widetilde{MU}^{-2q + 2(N-1)}(X)\) with \[t^{N-1}(w^q P^{C_p}(x) - x) = \phi_x(x) + y \<p\>(t).\]  If \(N > 1\), then \(y \in R_{(p)}\) for degree reasons and hence the right-hand side gives a series expansion contradicting our minimality hypothesis.  So, \(N = 1\), the class \(y\) lies in the critical degree \(-2q\), and the outer factor of \(t^{N-1}\) is not present in the last expression.\footnote{One can interpret the proof thus far as giving a bound on the amount of \(w\)--torsion needed to get the stability relation described in \Cref{QuillensKeyRelation}.  Our answer is quite surprising: we have found that we need just a single \(w\) (indeed, a single \(t\)), which isn't much stability at all!}  Restricting along \(i\) again to set \(w = t = 0\) and \(P^{C_p}(x) = x^p\), we obtain the equation \[\left. \begin{array}{rr} -x & \text{if \(q > 0\)} \\ x^p - x & \text{if \(q = 0\)} \end{array} \right\} = \phi_x(0) + py.\]
+Consider the set of possible integers \(N\) for which we can write such an equation---we know that \(N = (m-q)(p - 1)\) works, but we now also consider values of \(N\) which are not multiples of \((p - 1)\).  We aim to conclude that \(N = 1\) is the minimum of this set, so suppose that \(N\) is the minimum such value.  Using \Cref{RestrictingSteenrodOpToBasepoint}, we find that restricting this equation along the inclusion \(i\co X \to X \times BU(1)[p]\) sets \(t = 0\) and yields \(\psi_x(0) = 0\).  It follows that \(\psi_x(t) = t \phi_x(t)\) is at least once \(t\)--divisible, and thus \[t (t^{N-1}(w^q P^{C_p}x - x) - \phi_x(t)) = 0.\]  Appealing to \Cref{QuillensGysinFact}, we produce a class \(y \in \widetilde{MU}^{-2q + 2(N-1)}(X)\) with \[t^{N-1}(w^q P^{C_p}(x) - x) = \phi_x(x) + y \<p\>(t).\]  If \(N > 1\), then \(y \in R_{(p)}\) for degree reasons and hence the right-hand side gives a series expansion contradicting our minimality hypothesis.  So, we have \(N = 1\); the class \(y\) lies in the critical degree \(-2q\); and the outer factor of \(t^{N-1}\) is not present in the last expression.\footnote{One can interpret the proof thus far as giving a bound on the amount of \(w\)--torsion needed to get the stability relation described in \Cref{QuillensKeyRelation}.  Our answer is quite surprising: we have found that we need just a single \(w\) (indeed, a single \(t\)), which isn't much stability at all!}  Restricting along \(i\) again to set \(w = t = 0\) and \(P^{C_p}(x) = x^p\), we obtain the equation \[\left. \begin{array}{rr} -x & \text{if \(q > 0\)} \\ x^p - x & \text{if \(q = 0\)} \end{array} \right\} = \phi_x(0) + py.\]
 
 In the first case, where \(q > 0\), it follows that \(MU^{-2q}(X) \subseteq R^{-2q} + pMU^{-2q}(X)\), and since \(MU^{-2q}(X)\) has finite order torsion\footnote{This is a consequence of \(X\) having finitely many cells, \(MU\) having finitely many cells in each degree, and each homotopy group of the stable sphere being finitely generated.} it follows that \(MU^{-2q}(X) = R^{-2q}\).  In the other case, \(x\) can be rewritten as a sum of elements in \(R^{0}\), elements in \(p \widetilde{MU}^{0}(X)\), and elements in \((\widetilde{MU}^0(X))^p\).  Since the ideal \(\widetilde{MU}^0(X)\) is nilpotent, it again follows that \(\widetilde{MU}^0(X) = R^0\), concluding the induction.
 \end{proof}
