--- a/preamble.tex
+++ b/preamble.tex
@@ -273,7 +273,7 @@
 \newcommand{\GL}{\mathit{GL}}
 \newcommand{\perf}{\mathrm{perf}}
 \newcommand{\gpd}{\mathrm{gpd}}
-\newcommand{\ptyp}{p\text{-}\mathrm{typ}}
+\newcommand{\ptyp}{\mathit{p}\text{-}\mathrm{typ}}
 \newcommand{\id}{\mathrm{id}}
 \newcommand{\FGps}{\mathrm{FGps}}
 \newcommand{\fin}{\mathrm{fin}}
