--- a/finite.tex
+++ b/finite.tex
@@ -4,9 +4,9 @@
 
 
 
-Our goal in this Case Study is to thoroughly examine one of the techniques from \Cref{UnorientedBordismChapter} that has not yet resurfaced: the idea that \(\HFtwo\)--homology takes values in quasicoherent sheaves over an algebro-geometric object encoding the coaction of the dual Steenrod Hopf algebra.  We will find that this is quite generic: associated to a mildly nice ring spectrum \(E\), we will construct a rich algebro-geometric object \(\context{E}\), called its \textit{context}, such that \(E\)--homology sends spaces \(X\) to sheaves \(\context{E}(X)\) over \(\context{E}\).  In still nicer situations, the sheaf \(\context{E}(X)\) tracks exactly \(E_* X\) as well as the action of the \(E\)--analogue of the dual Steenrod algebra, called the \textit{Hopf algebroid of stable \(E\)--homology cooperations}.  From this perspective, we reinterpret \Cref{QuillensTheorem} as giving a presentation \[\context{MUP} \xrightarrow{\simeq} \moduli{fg},\] where \(\moduli{fg}\) is the \textit{moduli of formal groups}.  This indicates a program for studying periodic complex bordism, which we will outline in the rest of this introduction.
+Our goal in this Case Study is to thoroughly examine one of the techniques from \Cref{UnorientedBordismChapter} that has not yet resurfaced: the idea that \(\HFtwo\)--homology takes values in quasicoherent sheaves over an algebro-geometric object encoding the coaction of the dual Steenrod Hopf algebra.  We will find that this is quite generic: associated to a mildly nice ring spectrum \(E\), we will construct a rich algebro-geometric object \(\context{E}\), called its \textit{context}, such that \(E\)--homology sends spaces \(X\) to sheaves \(\context{E}(X)\) over \(\context{E}\).  In still nicer situations, the sheaf \(\context{E}(X)\) tracks exactly \(E_* X\) as well as the action of the \(E\)--analogue of the dual Steenrod algebra, called the \textit{Hopf algebroid of stable \(E\)--homology cooperations}.  From this perspective, we reinterpret \Cref{QuillensTheorem} as giving a presentation \[\context{MUP} \xrightarrow{\simeq} \moduli{fg},\] where \(\moduli{fg}\) is the \textit{moduli of formal groups}.  This indicates a program for studying periodic complex bordism, which we now outline.
 
-Abstractly, one can hope to study any sheaf, including \(\context{E}(X)\), by analyzing its stalks---or, relatedly (with some luck), by analyzing its geometric fibers.  The main utility of Quillen's theorem is that it gives us access to a concrete model of the context \(\context{MUP}\), so that we can determine where to even look for those fibers.  However, even this is not really enough to get off the ground: the stalks of some sheaf can exhibit nearly arbitrary behavior, and in particular there is little reason to expect the stalks of \(\context{E}(X)\) to vary nicely with \(X\).  In an ideal world, these stalks would themselves vary so nicely with \(X\) as to form homology theories, carrying cofiber sequences to short exact sequences of stalks.  In general, one might ask whether a map \(f\) as in the diagram
+Abstractly, one can hope to study any sheaf, including \(\context{E}(X)\), by analyzing its stalks---or, relatedly (with some luck), by analyzing its geometric fibers.  The main utility of Quillen's theorem is that it gives us access to a concrete model of the context \(\context{MUP}\), so that we can determine where to even look.  However, even this is not really enough to get off the ground: the stalks of some sheaf can exhibit nearly arbitrary behavior, and in particular there is little reason to expect the stalks of \(\context{E}(X)\) to vary nicely with \(X\) or otherwise reflect its structure.  In an ideal world, these stalks would themselves vary so nicely with \(X\) as to form homology theories, carrying cofiber sequences to short exact sequences of fibers.  In general, one might ask whether a map \(f\) as in the diagram
 \begin{center}
 \begin{tikzcd}[row sep=0.8em]
 \Spec R \arrow{r}{f} & \moduli{fgl} \arrow[equal]{r} \arrow{d} & \context{MUP}[0] \arrow{d} \arrow[equal]{r} & \Spec MUP_0 \\
@@ -21,7 +21,7 @@ Given such a diagram where the diagonal arrow is flat, the functor \[R_0(X) := M
 
 In the course of proving this theorem, Landweber additionally devised a method to recognize flat maps.  Recall that a map \(f\co Y \to X\) of schemes is flat exactly when for any closed subscheme \(i\co A \to X\) with ideal sheaf \(\mathcal I\) there is an exact sequence \[0 \to f^* \sheaf I \to f^* \sheaf O_X \to f^* i_* \sheaf O_A \to 0.\]  Landweber classified the closed subobjects of \(\moduli{fg}\), thereby giving a precise list of conditions needed to check maps for flatness.
 
-This appears to be a moot point, however, as it is unreasonable to expect this idea to apply to computing geometric fibers: the inclusion of a geometric point is flat only in highly degenerate cases.  We will see that this can be repaired: the inclusion of the formal completion of a subobject is flat in friendly situations, and so we naturally become interested in the infinitesimal deformation spaces of the geometric points \(\Gamma\) on \(\moduli{fg}\).  If we can analyze those, then Landweber's theorem will produce homology theories called \textit{Morava \(E_\Gamma\)--theories}.  Moreover, if we find that these deformation spaces are \emph{smooth}, it will follow that their deformation rings support regular sequences.  In this excellent case, by taking the regular quotient we will be able to recover \textit{Morava \(K_\Gamma\)--theory}, a \emph{homology theory}, which plays the role\footnote{To be clear: \(K_\Gamma(X)\) may not actually compute the literal stalk of \(\context{MUP}(X)\) at \(\Gamma\), since the homotopical operation of quotienting out the regular sequence is potentially sensitive to torsion sections of \(\context{MUP}(X)\).} of computing the stalk of \(\context{MUP}(X)\) at \(\Gamma\).\footnote{Incidentally, this program has no content when applied to \(\context{\HFtwo}\), as \(\Spec \F_2\) is simply too small.}
+This appears to be a moot point, however, as it is unreasonable to expect this idea to apply to computing geometric fibers: the inclusion of a geometric point is flat only in highly degenerate cases.  We will see that this can be repaired: the inclusion of the formal completion of a subobject is flat in friendly situations, and so we naturally become interested in the infinitesimal deformation spaces of the geometric points \(\Gamma\) on \(\moduli{fg}\).  If we can analyze those, then Landweber's theorem will produce homology theories called \textit{Morava \(E_\Gamma\)--theories}.  Moreover, if we find that these deformation spaces are \emph{smooth}, it will follow that their deformation rings support regular sequences.  In this excellent case, by taking the regular quotient we will be able to recover \textit{Morava \(K_\Gamma\)--theory}, a \emph{homology theory}, which plays the role\footnote{To be clear: \(K_\Gamma(X)\) may not actually compute the literal stalk of \(\context{MUP}(X)\) at \(\Gamma\), since the homotopical operation of quotienting out the regular sequence is potentially sensitive to torsion sections of the module \(\context{MUP}(X)\).} of computing the stalk of \(\context{MUP}(X)\) at \(\Gamma\).\footnote{Incidentally, this program has no content when applied to \(\context{\HFtwo}\), as \(\Spec \F_2\) is simply too small.}
 
 We have thus assembled a task list:
 \begin{itemize}
@@ -42,7 +42,7 @@ These will occupy our attention for the first half of this Case Study.  In the s
 
 In \Cref{HopfAlgebraLecture} we took for granted the \(\HFtwo\)--Adams spectral sequence, which had the form \[E_2^{*, *} = H^*_{\mathrm{gp}}(\InternalAut_1(\G_a); \widetilde{\HFtwo P_0 X}) \Rightarrow \pi_* X^\wedge_2,\] where we had already established some yoga by which we could identify the dual Steenrod coaction on \(\HFtwo P_0 X\) with an action of \(\InternalAut{\G_a}\) on its associated quasicoherent sheaf over \(\Spec \F_2\).  Our goal in this Lecture is to revise this tool to work for other ring spectra \(E\) and target spectra \(X\), eventually arriving at a spectral sequence with signature \[E_2^{*, *} = H^*(\context{E}; \context{E}(X)) \Rightarrow \pi_* X.\]  In particular, we will encounter along the way the object ``\(\context{E}\)'' envisioned in the introduction to this Case Study.
 
-At a maximum level of vagueness, we are seeking a process by which homotopy groups \(\pi_* X\) can be recovered from \(E\)--homology groups \(E_* X\).  Generally speaking, spectral sequences arise from applying homotopy groups to some topological filtration, so we might also try to filter \(X\) by pieces that look like \(E \sm X\).  Recognizing that \(X\) can be thought of as an \(\S\)--module and \(E \sm X\) can be thought of as its base change to an \(E\)--module, we are inspired to double back and consider as inspiration a completely algebraic analogue of the same situation.  Given a ring map \(f\co R \to S\) and an \(S\)--module \(N\), Grothendieck's framework of \index{descent!faithfully flat}\textit{(faithfully flat) descent} addresses the following questions:
+At a maximum level of vagueness, we are seeking a process by which homotopy groups \(\pi_* X\) can be recovered from \(E\)--homology groups \(E_* X\).  Recognizing that \(X\) can be thought of as an \(\S\)--module and \(E \sm X\) can be thought of as its base change to an \(E\)--module, we are inspired to double back and consider as inspiration a completely algebraic analogue of the same situation.  Given a ring map \(f\co R \to S\) and an \(S\)--module \(N\), Grothendieck's framework of \index{descent!faithfully flat}\textit{(faithfully flat) descent} addresses the following questions:
 \begin{enumerate}
 \item When is there an \(R\)--module \(M\) such that \(N \cong S \otimes_R M = f^* M\)?
 \item What extra data can be placed on \(N\), called \textit{descent data}, so that the category of descent data for \(f\) is equivalent to the category of \(R\)--modules under the map \(f^*\)?
@@ -64,7 +64,7 @@ Equivalently, we are noticing that pulling back an \(R\)--module from the bottom
 \Spec S \arrow{r} & \Spec R
 \end{tikzcd}
 \end{center}
-In fact, this isomorphism is compatible with further shuffles, in the sense that the following diagram commutes:\footnote{The commutativity of this triangle shows that any number of shuffles also commutes.}
+In fact, this isomorphism is compatible with further shuffles, in the sense that the following diagram commutes:\footnote{The commutativity of this triangle also shows that any number of shuffles also commutes.}
 \begin{center}
 \begin{tikzcd}
 N \otimes_R S \otimes_R S \arrow["\phi_{13}", "\simeq"']{rr} \arrow["\phi_{12}", "\simeq"']{rd} & & S \otimes_R S \otimes_R N \\
@@ -174,7 +174,7 @@ The \index{completion}\textit{\(E\)--nilpotent completion} of \(X\) is the total
 \end{definition}
 
 \begin{remark}[{\cite[Theorem 1.12]{RavenelLocalizationWRTPeriodic}, \cite{BousfieldLocalization}}]
-Ravenel proves the following generalization of \Cref{DescentFromHFpToHZp}.  Let \(E\) be a connective ring spectrum, let \(J\) be the set of primes complementary to those primes \(p\) for which \(E_*\) is uniquely \(p\)--divisible, and let \(X\) be a connective spectrum.\footnote{Even for connective ring spectra \(E\), the Bousfield localization \(L_E X\) does \emph{not} have to recover an arithmetic localization of \(X\) if \(X\) is not connective.  Take \(E = H\Z\) and \(X = KU\), which Snaith's theorem presents as \(X = KU = \Susp^\infty_+ \CP^\infty[\beta^{-1}]\), where \(\beta\co \CP^1 \to \CP^\infty\) is the Bott element.  This gives \(H\Z_* KU = H\Z_*(\CP^\infty[\beta^{-1}]) = (H\Z_* \CP^\infty)[b_1^{-1}]\).  We can identify the pieces in turn: \Cref{HZGivesGa} shows \(\CP^\infty_{H\Z} = \G_a\), so the dual Hopf algebra \((\sheaf O_{\G_a})^* = H\Z_* \CP^\infty\) is a divided polynomial algebra on the class \(b_1\).  Inverting \(b_1\) then gives \((H\Z_* \CP^\infty)[b_1^{-1}] = \Gamma[b_1][b_1^{-1}] = \Q[b_1^\pm]\), so that, in particular, there is a weak equivalence \(H\Z \sm KU \to H\Q \sm KU\).  The cofiber \(KU \to KU \otimes \Q \to KU \otimes \Q/\Z\) is thus a nonzero \(H\Z\)--acyclic spectrum.  You can also work this example without knowing Snaith's theorem: all you really need to know is that \(\Susp^\infty_+ \CP^\infty[\beta^{-1}] \to KU\) is a map of ring spectra, so that \(\pi_0 \Susp^\infty_+ \CP^\infty[\beta^{-1}]\) can't be a rational group since \(\pi_0 KU = \Z\).  Another entertaining consequence of this is \(F(KU/p, \S) = 0\).}  If each element of \(E_*\) has finite order, then \(X^\wedge_E = X^\wedge_J\) gives the arithmetic completion of \(X\)---which we reinterpret as \(\S^\wedge_J \to E\) being of effective descent for connective objects.  Otherwise, if \(E_*\) has elements of infinite order, then \(X^\wedge_E = X_{(J)}\) gives the arithmetic localization---which we reinterpret as saying that \(\S_{(J)} \to E\) is of effective descent.  Finding more encompassing conditions on maps \(f\co R \to S\) of \(E_\infty\)--rings for which descent holds is a subject of serious study~\cite[Appendix D]{LurieSAG}.
+Ravenel proves the following generalization of \Cref{DescentFromHFpToHZp}.  Let \(E\) be a connective ring spectrum, let \(J\) be the set of primes complementary to those primes \(p\) for which \(E_*\) is uniquely \(p\)--divisible, and let \(X\) be a connective spectrum.\footnote{Even for connective ring spectra \(E\), the Bousfield localization \(L_E X\) does \emph{not} have to recover an arithmetic localization of \(X\) if \(X\) is not connective.  Take \(E = H\Z\) and \(X = KU\), which Snaith's theorem presents as \(X = KU = \Susp^\infty_+ \CP^\infty[\beta^{-1}]\), where \(\beta\co \CP^1 \to \CP^\infty\) is the Bott element.  This gives \(H\Z_* KU = H\Z_*(\CP^\infty[\beta^{-1}]) = (H\Z_* \CP^\infty)[b_1^{-1}]\).  We can identify the pieces in turn: \Cref{HZGivesGa} shows \(\CP^\infty_{H\Z} = \G_a\), so the dual Hopf algebra \((\sheaf O_{\G_a})^* = H\Z_* \CP^\infty\) is a divided polynomial algebra on the class \(b_1\).  Inverting \(b_1\) then gives \((H\Z_* \CP^\infty)[b_1^{-1}] = \Gamma[b_1][b_1^{-1}] = \Q[b_1^\pm]\), so that, in particular, there is a weak equivalence \(H\Z \sm KU \to H\Q \sm KU\).  The cofiber \(KU \to KU \otimes \Q \to KU \otimes \Q/\Z\) is thus a nonzero \(H\Z\)--acyclic spectrum.  You can also work this example without knowing Snaith's theorem: all you really need to know is that \(\Susp^\infty_+ \CP^\infty[\beta^{-1}] \to KU\) is a map of ring spectra, so that \(\pi_0 \Susp^\infty_+ \CP^\infty[\beta^{-1}]\) cannot be a rational group since \(\pi_0 KU = \Z\).  Another entertaining consequence of this is \(D(KU/p) = F(KU/p, \S) = 0\), since $\S$ is $H\Z$--local.}  If each element of \(E_*\) has finite order, then \(X^\wedge_E = X^\wedge_J\) gives the arithmetic completion of \(X\)---which we reinterpret as \(\S^\wedge_J \to E\) being of effective descent for connective objects.  Otherwise, if \(E_*\) has elements of infinite order, then \(X^\wedge_E = X_{(J)}\) gives the arithmetic localization---which we reinterpret as saying that \(\S_{(J)} \to E\) is of effective descent.  Finding more encompassing conditions on maps \(f\co R \to S\) of \(E_\infty\)--rings for which descent holds is a subject of serious study~\cite[Appendix D]{LurieSAG}.
 \end{remark}
 
 Finally, we can interrelate these algebraic and topological notions of descent by studying the coskeletal filtration spectral sequence\footnote{The reader who would like a refresher about the construction of spectral sequences is referred to Boardman's exceptional article~\cite{BoardmanConditionallyConvergent}.} for \(\pi_* X^\wedge_E\), which we define to be the \index{Adams spectral sequence}\textit{\(E\)--Adams spectral sequence} for \(X\).  Applying the homotopy groups functor to the cosimplicial ring spectrum \(\mathcal D_E\) gives a cosimplicial ring \(\pi_* \mathcal D_E\), which we would like to connect with an algebraic descent object of the sort considered in \Cref{StrictCechDescentRemark}.  In order to make this happen, we need two niceness conditions on \(E\):
@@ -226,7 +226,7 @@ The sphere spectrum fails to satisfy {\CH}, so the above results do not apply to
 \end{remark}
 
 \begin{remark}\label{WarningAboutStacks}
-In \Cref{DescentFromHFpToHZp}, we discussed translating from the algebra descent picture to a homotopical one, and a crucial point was how thorough we had to be: we transferred not just to the derived category \(D(\Spec R)\) but we also replaced the base ring \(R\) with its homotopical incarnation \(HR\).  In \Cref{FHGivesComodules}, we have not been as thorough as possible: both \(X_0\) and \(X_1\) are schemes and hence satisfy a sheaf condition individually, but the functor \((X_0, X_1)\), thought of as valued in homotopy \(1\)--types, does not necessarily satisfy a homotopy sheaf condition.  Enforcing this descent condition results in the \index{stack!associated}\textit{associated stack}~\cite[Definition 8.13]{HopkinsCOCTALOS}, denoted \[\Spec A \mmod \Spec \Gamma = X_0 \mmod X_1.\]  Remarkably, this does not change the category of Cartesian quasicoherent sheaves---it is still equivalent to the category of \((A, \Gamma)\)--comodules~\cite[Proposition 11.6]{HopkinsCOCTALOS}.  However, several different Hopf algebroids (such as those with maps between them inducing natural equivalences of groupoid schemes, as studied by Hovey~\cite[Theorem D]{HoveyMoritaThy}, but also some with \emph{no} such zig-zag) can give the same associated stack, resulting in surprising equivalences of comodule categories.\footnote{We will employ one of these surprising equivalences in \Cref{OpenSubstacksOfMfg}.}  For the most part, it will not be especially relevant to us whether we are considering the groupoid scheme or its associated stack, so we will not draw much of a distinction.  For the most part, the associated stack is theoretically preferable, but the groupoid scheme is easier to think about.\footnote{Constructing the correct derived category of comodules also has subtle associated homotopical issues.  Hovey gives a good reference for this in the case of a stack associated to a Hopf algebroid~\cite{HoveyHomotopyOfComodules}.}
+In \Cref{DescentFromHFpToHZp}, we discussed translating from the algebraic descent picture to a homotopical one, and a crucial point was how thorough we had to be: we transferred not just to the derived category \(D(\Spec R)\) but we also replaced the base ring \(R\) with its homotopical incarnation \(HR\).  In \Cref{FHGivesComodules}, we have not been as thorough as possible: both \(X_0\) and \(X_1\) are schemes and hence satisfy a sheaf condition individually, but the functor \((X_0, X_1)\), thought of as valued in homotopy \(1\)--types, does not necessarily satisfy a homotopy sheaf condition.  Enforcing this descent condition results in the \index{stack!associated}\textit{associated stack}~\cite[Definition 8.13]{HopkinsCOCTALOS}, denoted \[\Spec A \mmod \Spec \Gamma = X_0 \mmod X_1.\]  Remarkably, this does not change the category of Cartesian quasicoherent sheaves---it is still equivalent to the category of \((A, \Gamma)\)--comodules~\cite[Proposition 11.6]{HopkinsCOCTALOS}.  However, several different Hopf algebroids (such as those with maps between them inducing natural equivalences of groupoid schemes, as studied by Hovey~\cite[Theorem D]{HoveyMoritaThy}, but also some with \emph{no} such zig-zag) can give the same associated stack, resulting in surprising equivalences of comodule categories.\footnote{We will employ one of these surprising equivalences in \Cref{OpenSubstacksOfMfg}.}  For the most part, it will not be especially relevant to us whether we are considering the groupoid scheme or its associated stack, so we will not draw much of a distinction.  For the most part, the associated stack is theoretically preferable, but the groupoid scheme is easier to think about.\footnote{Constructing the correct derived category of comodules also has subtle associated homotopical issues.  Hovey gives a good reference for this in the case of a stack associated to a Hopf algebroid~\cite{HoveyHomotopyOfComodules}.}
 \end{remark}
 
 \begin{example}
@@ -234,7 +234,7 @@ Most of the homology theories we will discuss have these {\CH} and {\FH} propert
 \end{example}
 
 \begin{example}\label{ContextOfMUPExample}
-The context for \(MUP\) is considerably more complicated, but Quillen's theorem can be equivalently stated as giving a description of it.  Quillen's theorem on its face gives an equivalence \(\Spec MUP_0 \cong \moduli{fgl}\), but in \Cref{OrientationsOnEAndMU} we also gave a description of \(\Spec MUP_0 MUP\): it is the moduli of pairs of formal group laws equipped with an invertible power series intertwining them.  Altogether, this presents \(\context{MUP}\) as the moduli of formal groups: \[\context{MUP} \simeq \moduli{fg} := \moduli{fgl} \mmod \moduli{ps}^{\gpd},\] where \(\moduli{ps} = \InternalEnd(\A^1)\) is the moduli of self-maps of the affine line (i.e., of power series) and \(\moduli{ps}^{\gpd}\) is the multiplicative subgroup of invertible such maps.  We include a picture of the \(p\)--localization of the \(MU\)--Adams \(E_2\)--page in \Cref{ANSS2Figure} and \Cref{ANSS3Figure}.  In view of \Cref{WarningAboutStacks}, there is an important subtlety about the stack \(\moduli{fg}\): an \(R\)--point is a functor on affines over \(\Spec R\) which is locally isomorphic to a formal group, but whose local isomorphism \emph{may not patch} to give a global isomorphism.  This does not agree, a priori, with the definition of formal group given in \Cref{DefnFormalGps}, where the isomorphism witnessing a functor as a formal variety was expected to be global.  We will address this further in \Cref{CoordinatizbleFGs} below.\footnote{Naumann gives a very pleasant write-up of, among other things, the difference between $\moduli{fg}$ as a simplicial scheme and as a stack~\cite{Naumann}.}
+The context for \(MUP\) is considerably more complicated, but Quillen's theorem can be equivalently stated as giving a description of it.  Quillen's theorem on its face gives an equivalence \(\Spec MUP_0 \cong \moduli{fgl}\), but in \Cref{OrientationsOnEAndMU} we also gave a description of \(\Spec MUP_0 MUP\): it is the moduli of pairs of formal group laws equipped with an invertible power series intertwining them.  Altogether, this presents \(\context{MUP}\) as the moduli of formal groups: \[\context{MUP} \simeq \moduli{fg} := \moduli{fgl} \mmod \moduli{ps}^{\gpd},\] where \(\moduli{ps} = \InternalEnd(\A^1)\) is the moduli of endomorphisms of the affine line (i.e., of power series) and \(\moduli{ps}^{\gpd}\) is the multiplicative subgroup of invertible such maps.  We include a picture of the \(p\)--localization of the \(MU\)--Adams \(E_2\)--page in \Cref{ANSS2Figure} and \Cref{ANSS3Figure}.  In view of \Cref{WarningAboutStacks}, there is an important subtlety about the stack \(\moduli{fg}\): an \(R\)--point is a functor on affines over \(\Spec R\) which is locally isomorphic to a formal group, but whose local isomorphism \emph{may not patch} to give a global isomorphism.  This does not agree, a priori, with the definition of formal group given in \Cref{DefnFormalGps}, where the isomorphism witnessing a functor as a formal variety was expected to be global.  We will address this further in \Cref{CoordinatizbleFGs} below.\footnote{Naumann gives a very pleasant write-up of, among other things, the difference between $\moduli{fg}$ as a simplicial scheme and as a stack~\cite{Naumann}.}
 \end{example}
 
 \afterrectopage{
@@ -368,7 +368,7 @@ This is made explicit in the following calculation:
 x +_\phi' (y +_\phi' z) & = x +_\phi' (y +_\phi z + f(y, z)) \\
 & = x +_\phi (y +_\phi z + f(y, z)) + f(x, y +_\phi z + f(y, z)) \\
 & \equiv x +_\phi (y +_\phi z) + f(y, z) + f(x, y + z) \pmod{(x, y)^{n+1}}, \\
-(x +_\phi' y) +_\phi' z = & (x +_\phi y + f(x, y)) +_\phi' z \\
+(x +_\phi' y) +_\phi' z & = (x +_\phi y + f(x, y)) +_\phi' z \\
 & = (x +_\phi y + f(x, y)) +_\phi z + f(x +_\phi y + f(x, y), z) \\
 & \equiv (x +_\phi y) +_\phi z + f(x, y) + f(x + y, z) \pmod{(x, y)^{n+1}},
 \end{align*}
@@ -396,10 +396,10 @@ To verify that Claims 1 and 2 are equivalent, note first that \Cref{TwoNBudsDiff
 We will now verify Claim 1 computationally, thereby completing the proof of \Cref{LazardSplittingLemma} (and hence \Cref{LazardsTheorem}).
 
 \begin{lemma}[{Symmetric \(2\)--cocycle lemma~\cite[Lemme 3]{LazardGroupesDeLie}, cf.\ \cite[Theorem 3.1]{HopkinsCOCTALOS}}]\label{Symmetric2CocycleLemma}
-Symmetric \(2\)--cocyclesof degree \(n\) are spanned by \[c_n = \frac{1}{d_n} \cdot ((x + y)^n - x^n - y^n),\] where \(d_n = \gcd\left( \binom{n}{k} \middle| 0 < k < n \right)\).
+Symmetric \(2\)--cocycles of degree \(n\) are spanned by \[c_n = \frac{1}{d_n} \cdot ((x + y)^n - x^n - y^n),\] where \(d_n = \gcd\left( \binom{n}{k} \middle| 0 < k < n \right)\).
 \end{lemma}
 \begin{proof}
-We begin with a reduction of the sorts of rings over which we must consider the possible symmetric \(2\)--cocycles.  First, notice that only the additive group structure of the ring matters: the symmetric \(2\)--cocycle condition does not involve any ring multiplication.  Second, it suffices to show the Lemma over a finitely generated abelian group, as a particular polynomial has finitely many terms and hence involves finitely many coefficients.  Noticing that the Lemma is true for \(A \oplus B\) if and only if it's true for \(A\) and for \(B\), we couple these facts to the structure theorem for finitely generated abelian groups to reduce to the cases \(\Z\) and \(\Z/p^r\).  From here, we can reduce to the prime fields: if \(A \le B\) is a subgroup and the Lemma is true for \(B\), it's true for \(A\), so we will be able to deduce the case of \(\Z\) from the case of \(\Q\).  Lastly, we can also reduce from \(\Z/p^r\) to \(\Z/p\) using an inductive Bockstein-style argument over the extensions \[(p^{r-1}) / (p^r) \to \Z/p^r \to \Z/p^{r-1}\] and noticing that \((p^{r-1}) / (p^r) \cong \Z/p\) as abelian groups.  Hence, we can now freely assume that our ground object is a prime field.
+We begin with a reduction of the sorts of rings over which we must consider the possible symmetric \(2\)--cocycles.  First, notice that only the additive group structure of the ring matters: the symmetric \(2\)--cocycle condition does not involve any ring multiplication.  Second, it suffices to show the Lemma over a finitely generated abelian group, as a particular polynomial has finitely many terms and hence involves finitely many coefficients.  Noticing that the Lemma is true for \(A \oplus B\) if and only if it's true for \(A\) and for \(B\), we couple these facts to the structure theorem for finitely generated abelian groups to reduce to the cases \(\Z\) and \(\Z/p^r\).  From here, we can reduce to the prime fields: if \(A \le B\) is a subgroup and the Lemma is true for \(B\), it's true for \(A\), so we will be able to deduce the case of \(\Z\) from the case of \(\Q\).  Lastly, we can also reduce from \(\Z/p^r\) to \(\Z/p\) using an inductive Bockstein-style argument over the extensions \[(p^r) / (p^{r+1}) \to \Z/p^{r+1} \to \Z/p^r\] and noticing that \((p^r) / (p^{r+1}) \cong \Z/p\) as abelian groups.  Hence, we can now freely assume that our ground object is a prime field.
 
 We now ground ourselves by fitting symmetric \(2\)--cocycles into a more general homological framework, hoping that we can use such a machine to power a computation.  For a formal group scheme \(\G\), we can form a simplicial scheme \(B\G\) in the usual way:
 \[B\G := \left\{
@@ -498,7 +498,7 @@ We now turn to understanding the geometry of the quotient stack \(\moduli{fg}\) 
 \begin{theorem}[{cf.\ \Cref{RationalFGLsHaveLogarithms}}]\label{RationalGeometricPointsOfMfg}
 Let \(k\) be any field of characteristic \(0\).  Then \(\G_a\) describes the unique map
 \[\pushQED{\qed}
-\Spec k \xrightarrow{\simeq} \moduli{fg}. \qedhere
+\Spec k \mmod \Gm \xrightarrow{\simeq} \moduli{fg}. \qedhere
 \popQED\]
 \end{theorem}
 
@@ -609,7 +609,7 @@ For any sequence of coefficients \(v_j \in R\) in a \(\Z_{(p)}\)--algebra \(R\),
 \end{corollary}
 
 \begin{corollary}
-In the case that the ground ring \(R\) is a field of positive characteristic, the height of a formal group can be taken to be the size of its \(p\)--torsion: \[\height(\G) = \log_p \dim_R \sheaf O_{\G[p]} = \log_p \dim_R \sheaf (O_{\G} / [p](x)).\]  This is the first nonzero coefficient in the expansion of its \(p\)--series. \qed
+In the case that the ground ring \(R\) is a field of positive characteristic, the height of a formal group can be taken to be the size of its \(p\)--torsion: \[\height(\G) = \log_p \dim_R \sheaf O_{\G[p]} = \log_p \dim_R \sheaf (O_{\G} / [p](x)).\]  This is the first nonzero coefficient in the expansion of its \(p\)--series.\footnote{In the case of a field of characteristic \(0\), this definition of height is constant at \(0\).  This convention is uniformly abided.} \qed
 \end{corollary}
 
 Finally, we exploit these results to make deductions about the geometry of \(\moduli{fg} \times \Spec \Z_{(p)}\).  There is an inclusion of groupoid--valued sheaves from \(p\)--typical formal group laws with \(p\)--typical isomorphisms to all formal group laws with all isomorphisms.  \Cref{EveryFGLIsPTypical} can be viewed as presenting this inclusion as a deformation retraction, witnessing a natural \index{stack!equivalence}\emph{equivalence} of groupoids.  It follows from \Cref{WarningAboutStacks} that they both present the same stack.  The central utility of this equivalence is that the Kudo--Araki moduli of \(p\)--typical formal group laws is a considerably smaller algebra than \(\sheaf O_{\moduli{fgl}}\), resulting in a less noisy picture of the Hopf algebroid.
@@ -626,7 +626,7 @@ X_0 \arrow["f"]{r} & \mathbb A^1.
 (In terms of Hopf algebroids, the corresponding element \(a \in A\) satisfies \(\eta_L(a) = \eta_R(a)\).)  Correspondingly, a closed subscheme \(A \subseteq X_0\) determined by the simultaneous vanishing of functions \(f_\alpha\) is said to be \index{stack!invariant ideal}\textit{invariant} when the vanishing condition is invariant---i.e., a point lies in the simultaneous vanishing locus if and only if its entire orbit under \(X_1\) also lies in the simultaneous vanishing locus.  (In terms of Hopf algebroids, the corresponding ideal \(I \subseteq A\) satisfies \(\eta_L(I) = \eta_R(I)\).)  Finally, a \index{stack!closed}\textit{closed substack} is a substack determined by an invariant ideal of \(X_0\).
 \end{definition}
 
-We now have the language to describe all of the closed substacks of \(\moduli{fg} \times \Spec \Z_{(p)}\)---or, equivalently, to discern all of the invariant ideals of \(\sheaf O_{\moduli{fgl}^{\ptyp}}\).
+We now have the language to describe the closed substacks of \(\moduli{fg} \times \Spec \Z_{(p)}\), which is equivalent to discerning all of the invariant ideals of \(\sheaf O_{\moduli{fgl}^{\ptyp}}\).
 
 \begin{corollary}[{\cite[Theorem 4.6 and Lemmas 4.7-8]{Wilson}}]\label{IdIsAnInvariantIdeal}
 The ideal \(I_d = (p, v_1, \ldots, v_{d-1})\) is invariant under the action of \emph{strict} formal group law isomorphisms for all \(d\).  It determines the closed substack \(\moduli{fg}^{\ge d}\) of formal group laws of \(p\)--height at least \(d\).
